hphp/hack/test/typecheck/expression_trees/instance_method_protected.php.exp
ERROR: File "instance_method_protected.php", line 7, characters 9-11:
Cannot access non-public members within expression trees. (Typing[4448])
  File "instance_method_protected.php", line 12, characters 22-24:
  Member defined here
ERROR: File "instance_method_protected.php", line 7, characters 9-11:
You cannot access this method (Typing[4112])
  File "instance_method_protected.php", line 12, characters 22-24:
  This member is protected
